# AlgorithmsCpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  dummy.cpp
src/include/: algos.h
test/: CMakeLists.txt  custom_tests.cpp  test_runner.cpp
